@@ -25,10 +25,6 @@ To automatically recognize a file format from the extension, use
 Converts from one HDR format to another
 
 .SH BUGS
-pfsinpfm does not handle images that store floating point numbers
-using big-endian format. pfsoutpfm may also read floating point
-numbers incorrectly on big-endian machines.
-
 Please report bugs and comments on implementation to 
 the discussion group http://groups.google.com/group/pfstools
 .SH "SEE ALSO"
